add terrible javascript

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
   <head>
     <script type="text/javascript" src="namer.js"></script>
   </head>
-  <body onload="go();" id="body">
+  <body onload="go();" >
+  <div id="content">
+
+  </div>
+  <p></p>
+  <div id="footer">
+    <a href="http://github.com/defenestration/namer">🦊</a>
+  </div>
   </body>
 </html>
