--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <html>
   <head>
     <script type="text/javascript" src="namer.js"></script>
+    <style>
+    body {
+      background-color: rgb(255, 255, 255);
+      text-align: center;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .content {
+      margin: 100px
+    }
+
+    /* p    {color: red;} */
+    </style>
   </head>
   <body onload="go();" >
-  <div id="content">
-
+  <div class="content">
+    <h2 id="content">
+    </h2>
   </div>
   <p></p>
-  <div id="footer">
+  <div class="footer">
     <a href="http://github.com/defenestration/namer">🦊</a>
   </div>
   </body>
