add button to html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <div class="content">
     <h2 id="content">
     </h2>
+    <p>
+    <button onclick="go()" class=button>try again</button> 
+    </p>
   </div>
   <p></p>
   <div class="footer">
