toggle weapons in js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </h2>
     <p>
     <button onclick="go()" class=button>try again</button> 
+    <br>
+    <button onclick="toggle_weapons()" class=button>toggle weapons</button> <span id="weapon_status"></span>
     </p>
   </div>
   <p></p>
