space out buttons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     .content {
       margin: 100px
     }
+    button {
+      margin: 10px;
+    }
     /* p    {color: red;} */
     </style>
   </head>
