--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
     <br>
     <input type="checkbox" id="weapons_cb" name="weapons_cb" value="yes" onclick="toggle_weapons()">  
     <label for="weapons_cb"> Weapons </label>
+    <br />
+    <label for="order_dropdown">Order:</label>
+    <select name="order_dropdown" id="order_dropdown">
+      <option value="animal">animal first</option>
+      <option value="transport">transport first</option>
+      <option value="random">random</option>
+    </select>
+
     </p>
   </div>
   <p></p>
